# fiapo-rs

./: .env  .env.default  Cargo.toml  README.md
app/: Cargo.toml
app/src/: app.rs  main.rs
app/src/server/: mod.rs
app/styles/: default.css  vars.css
docs/: README.md
docs_t/: README.md  reference.md
resources/: resources.gresource.xml
resources/styles/: home.css  main.css  vars.css
server/: Cargo.toml
src/: app.rs  main.rs
src/components/: home.rs  mod.rs  reader.rs
src/core/: app.rs  image.rs  mod.rs  reader.rs  test.rs  window.rs
src/core/backends/: mod.rs
src/core/components/: home.rs  icon_button.rs  mod.rs  reader.rs
src/core/server/: mod.rs  server.rs
src/core/utils/: config.rs  image.rs  mod.rs  styles.rs
src/server/: mod.rs
src/ui/: home.rs  mod.rs  reader.rs
src/ui/components/: card.rs
src/utils/: config.rs
styles/: default.css  main.css  vars.css
tests/: core.rs
