[package]
name = "fiapo"
version = "0.0.1"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
gtk4 = { version = "0.10.0", features = ["v4_6", "v4_10", "v4_12"] }
image = "0.25.6"
log = "0.4.27"
pdf2image = "0.1.3"
# pdfium-render = "0.8.34"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
anyhow = "1.0.98"
mangadex-api = { version = "3.4.5", features = ["utils"] }
tokio = { version = "1.47.0", features = ["full"] }
mangadex-api-types-rust = "0.10.0"
uuid = "1.17.0"
reqwest = { version = "0.12.22", features = ["blocking"] }
fragile = "2.0.1"

[build-dependencies]
glib-build-tools = "0.21.0"
