[package]
name = "fiapo"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
server = { path = "../server" }

dotenv = "0.15.0"
env_logger = "0.11.8"
gtk4 = { version = "0.10.0", features = ["v4_6", "v4_10"] }
image = "0.25.6"
log = "0.4.27"
pdf2image = "0.1.3"
# pdfium-render = "0.8.34"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
